# GameInCPlusPlus

./: .gitignore
Minesweeper/: CMakeLists.txt
Minesweeper/include/: Constants.h  Game.h  Input.h  LoadSystem.h  Renderer.h  ResourceManager.h  Scene.h  TimeSystem.h
Minesweeper/src/: Game.cpp  Input.cpp  Renderer.cpp  Scene.cpp  main.cpp
Snake/: CMakeLists.txt  README.md  render_diagram.py
Snake/src/: Constants.h  Food.cpp  Food.h  Game.cpp  Game.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  SaveSystem.h  Scene.cpp  Scene.h  Snake.cpp  Snake.h  main.cpp
